# cachyos-hello-qq

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
chwd-wrapper/: Cargo.toml
chwd-wrapper/src/: lib.rs
data/: org.cachyos.hello.desktop
pages/en/: release.html
pages/ru/: release.html
qml/: Main.qml
qml/components/: FixGroupBox.qml  GetInvolvedDialog.qml  HtmlReaderDialog.qml  ReadmeDialog.qml  ReleaseInfoDialog.qml  WrapSwitch.qml
qml/pages/: InstallAppsPage.qml  KernelManagerPage.qml  LinksPage.qml  MainPage.qml  TestPage.qml  TweaksAndFixesPage.qml
src/: autostartcontroller.cpp  autostartcontroller.h  cachyoskmrunner.cpp  cachyoskmrunner.h  cachyospirunner.cpp  cachyospirunner.h  commandrunner.cpp  commandrunner.h  fileloader.cpp  fileloader.h  installerbackend.cpp  installerbackend.h  kwinservice.cpp  kwinservice.h  languageselectorbackend.cpp  languageselectorbackend.h  main.cpp  networkingfixservice.cpp  networkingfixservice.h  pacmanservice.cpp  pacmanservice.h  systemdservice.cpp  systemdservice.h  terminallauncher.cpp  terminallauncher.h  tweakcontroller.cpp  tweakcontroller.h  tweakdefinition.h  tweakrepository.cpp  tweakrepository.h
translations/: CachyOsHello_ru.ts
